# loadavg_gui

./: Cargo.toml  LICENSE  README.md
src/: custom_plot_backend.rs  load_avg_view.rs  main.rs  models.rs
