[package]
name = "loadavg_gui"
version = "0.1.0"
authors = ["hibi221b"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
version = "0.2.0"
features = [
    "canvas",
    "tokio"
]

[dependencies]
plotters = "0.3.0"
plotters-backend = "0.3.0"
sysinfo = "0.15.9"